--- a/src/patternfly/base/tokens/_tokens-font.scss
+++ b/src/patternfly/base/tokens/_tokens-font.scss
@@ -14,9 +14,13 @@
   --pf-t--global--font--weight--body--200: 500;
   --pf-t--global--font--weight--heading--100: 700;
   --pf-t--global--font--weight--heading--200: 700;
+
+  // TODO these are sm/def/lg? CAN BE REMOVED?
   --pf-t--global--font--size--body--100: 12px;
   --pf-t--global--font--size--body--200: 14px;
   --pf-t--global--font--size--body--300: 16px;
+
+  // TODO these are h1-h6 NOT USED
   --pf-t--global--font--size--heading--100: 16px;
   --pf-t--global--font--size--heading--200: 18px;
   --pf-t--global--font--size--heading--300: 20px;
@@ -34,10 +38,14 @@
   --pf-t--global--font--weight--body--bold: var(--pf-t--global--font--weight--body--200);
   --pf-t--global--font--weight--heading: var(--pf-t--global--font--weight--heading--100);
   --pf-t--global--font--weight--heading--bold: var(--pf-t--global--font--weight--heading--200);
-  --pf-t--global--font--size--body--sm: var(--pf-t--global--font--size--body--100);
-  --pf-t--global--font--size--body--md: var(--pf-t--global--font--size--body--200);
-  --pf-t--global--font--size--body--lg: var(--pf-t--global--font--size--body--300);
-  --pf-t--global--font--size--body: var(--pf-t--global--font--size--body--md);
+
+  // TODO USED IN COMPONENTS
+  --pf-t--global--font--size--body--sm: var(--pf-t--global--font--size--body--100); // now SMALL
+  --pf-t--global--font--size--body--md: var(--pf-t--global--font--size--body--200); // REMOVED
+  --pf-t--global--font--size--body--lg: var(--pf-t--global--font--size--body--300); // now LARGE
+  --pf-t--global--font--size--body: var(--pf-t--global--font--size--body--md); // REMOVED
+
+  // TODO USED IN COMPONENTS these are now h1-h6
   --pf-t--global--font--size--heading--xs: var(--pf-t--global--font--size--heading--100);
   --pf-t--global--font--size--heading--sm: var(--pf-t--global--font--size--heading--200);
   --pf-t--global--font--size--heading--md: var(--pf-t--global--font--size--heading--300);
