chore(tokens): fix global font color, large-lg

--- a/src/patternfly/base/_globals.scss
+++ b/src/patternfly/base/_globals.scss
@@ -50,6 +50,7 @@
     font-size: var(--pf-t--global--font--size--body);
     font-weight: var(--pf-t--global--font--weight--body);
     line-height: var(--pf-t--global--font--line-height--body);
+    color: var(--pf-t--global--text--color--regular);
   }
 
   :where(
