--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -292,6 +292,7 @@
 }
 
 // stylelint-disable no-invalid-position-at-import-rule
+@import "./tokens/workspace-overrides";
 @import "./tokens/tokens-font";
 @import "./tokens/tokens-palette";
 @import "./tokens/tokens-default";
