--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -292,13 +292,8 @@
 }
 
 // stylelint-disable no-invalid-position-at-import-rule
-@import "./themes/dark/variables";
-
-@include pf-v5-theme-dark {
-  @include pf-v5-theme-dark-variables;
-}
-
+@import "./tokens/workspace-overrides";
+@import "./tokens/tokens-font";
 @import "./tokens/tokens-palette";
 @import "./tokens/tokens-default";
-@import "./tokens/tokens-font";
 @import "./tokens/tokens-dark";
