--- a/src/patternfly/components/Card/card--radio.hbs
+++ b/src/patternfly/components/Card/card--radio.hbs
@@ -1,6 +1,7 @@
-{{#> radio radio--modifier="pf-m-standalone"}}
-  {{#> radio-input radio-input--attribute=(concat 'id="' card--id '-radio" name="' card--id '-radio" aria-labelledby="' card--id '" ' card--radio--IsDisabled ' ' card--radio--IsChecked)}}{{/radio-input}}
-  {{#if card--IsSelectable}}
-    {{#> radio-label radio-label--modifier=(ternary card--radio--IsDisabled ' pf-m-disabled' '') radio-label--attribute=(concat 'id="' card--id '-radio-label" name="' card--id '-radio" for="' card--id '-radio" name="' card--id '-radio"')}}{{/radio-label}}
-  {{/if}}
-{{/radio}}
+{{> radio
+    radio--IsStandalone=(inverse card--IsSelectable)
+    radio-input--attribute=(concat 'id="' card--id '-radio" name="' card--id '-radio" aria-labelledby="' card--id '" ' card--radio--IsDisabled ' ' card--radio--IsChecked)
+    radio-label--text=(ternary card--IsSelectable " " false)
+    radio-label--modifier=(ternary card--radio--IsDisabled ' pf-m-disabled' '')
+    radio-label--attribute=(concat 'id="' card--id '-radio-label" name="' card--id '-radio" for="' card--id '-radio" name="' card--id '-radio"')
+  }}
