--- a/src/patternfly/components/HelperText/helper-text.scss
+++ b/src/patternfly/components/HelperText/helper-text.scss
@@ -6,31 +6,24 @@
   // item
   --#{$helper-text}__item-icon--Color: var(--pf-t--global--icon--color--regular);
   --#{$helper-text}__item-text--Color: var(--pf-t--global--text--color--regular);
-  --#{$helper-text}__item--FontWeight: var(--pf-t--global--font--weight--body);
+  --#{$helper-text}__item-text--FontWeight: var(--pf-t--global--font--weight--body);
   --#{$helper-text}__item-icon--m-indeterminate--Color: var(--pf-t--global--icon--color--subtle);
   --#{$helper-text}__item-text--m-indeterminate--Color: var(--pf-t--global--text--color--subtle);
   --#{$helper-text}__item-icon--m-warning--Color: var(--pf-t--global--icon--color--status--warning--default);
-  --#{$helper-text}__item-text--m-warning--Color: var(--pf-t--global--text--color--regular);
-  --#{$helper-text}__item--m-warning--FontWeight: var(--pf-t--global--font--weight--body--bold);
+  --#{$helper-text}__item-text--m-warning--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$helper-text}__item-icon--m-success--Color: var(--pf-t--global--icon--color--status--success--default);
-  --#{$helper-text}__item-text--m-success--Color: var(--pf-t--global--text--color--regular);
-  --#{$helper-text}__item--m-success--FontWeight: var(--pf-t--global--font--weight--body--bold);
+  --#{$helper-text}__item-text--m-success--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$helper-text}__item-icon--m-error--Color: var(--pf-t--global--icon--color--status--danger--default);
-  --#{$helper-text}__item-text--m-error--Color: var(--pf-t--global--text--color--regular);
-  --#{$helper-text}__item--m-error--FontWeight: var(--pf-t--global--font--weight--body--bold);
+  --#{$helper-text}__item-text--m-error--FontWeight: var(--pf-t--global--font--weight--body--bold);
 
   // dynamic
   --#{$helper-text}--m-dynamic__item-icon--Color: var(--pf-t--global--icon--color--regular);
-  --#{$helper-text}--m-dynamic__item-text--Color: var(--pf-t--global--text--color--regular);
   --#{$helper-text}--m-dynamic--m-indeterminate__item-icon--Color: var(--pf-t--global--icon--color--subtle);
   --#{$helper-text}--m-dynamic--m-indeterminate__item-text--Color: var(--pf-t--global--text--color--subtle);
   --#{$helper-text}--m-dynamic--m-warning__item-icon--Color: var(--pf-t--global--icon--color--status--warning--default);
-  --#{$helper-text}--m-dynamic--m-warning__item-text--Color: var(--pf-t--global--text--color--regular);
-  --#{$helper-text}--m-dynamic--m-warning__item--FontWeight: var(--pf-t--global--font--weight--body--bold);
+  --#{$helper-text}--m-dynamic--m-warning__item-text--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$helper-text}--m-dynamic--m-success__item-icon--Color: var(--pf-t--global--icon--color--status--success--default);
-  --#{$helper-text}--m-dynamic--m-success__item-text--Color: var(--pf-t--global--text--color--regular);
   --#{$helper-text}--m-dynamic--m-error__item-icon--Color: var(--pf-t--global--icon--color--status--danger--default);
-  --#{$helper-text}--m-dynamic--m-error__item-text--Color: var(--pf-t--global--text--color--regular);
 
   // icon
   --#{$helper-text}__item-icon--MarginRight: var(--pf-t--global--spacer--xs);
@@ -50,43 +43,35 @@
 
 .#{$helper-text}__item {
   display: flex;
-  font-weight: var(--#{$helper-text}__item--FontWeight);
+  font-weight: var(--#{$helper-text}__item-text--FontWeight);
 
 
   &.pf-m-indeterminate {
     --#{$helper-text}__item-icon--Color: var(--#{$helper-text}__item-icon--m-indeterminate--Color);
     --#{$helper-text}__item-text--Color: var(--#{$helper-text}__item-text--m-indeterminate--Color);
     --#{$helper-text}--m-dynamic__item-icon--Color: var(--#{$helper-text}--m-dynamic--m-indeterminate__item-icon--Color);
-    --#{$helper-text}--m-dynamic__item-text--Color: var(--#{$helper-text}--m-dynamic--m-warning__item-text--Color);
+    --#{$helper-text}--m-dynamic__item-text--Color: var(--#{$helper-text}--m-dynamic--m-indeterminate__item-text--Color);
   }
 
   &.pf-m-warning {
-    --#{$helper-text}__item--FontWeight: var(--#{$helper-text}__item--m-warning--FontWeight);
+    --#{$helper-text}__item-text--FontWeight: var(--#{$helper-text}__item-text--m-warning--FontWeight);
     --#{$helper-text}__item-icon--Color: var(--#{$helper-text}__item-icon--m-warning--Color);
-    --#{$helper-text}__item-text--Color: var(--#{$helper-text}__item-text--m-warning--Color);
     --#{$helper-text}--m-dynamic__item-icon--Color: var(--#{$helper-text}--m-dynamic--m-warning__item-icon--Color);
-    --#{$helper-text}--m-dynamic__item-text--Color: var(--#{$helper-text}--m-dynamic--m-warning__item-text--Color);
   }
 
   &.pf-m-success {
-    --#{$helper-text}__item--FontWeight: var(--#{$helper-text}__item--m-success--FontWeight);
+    --#{$helper-text}__item-text--FontWeight: var(--#{$helper-text}__item-text--m-success--FontWeight);
     --#{$helper-text}__item-icon--Color: var(--#{$helper-text}__item-icon--m-success--Color);
-    --#{$helper-text}__item-text--Color: var(--#{$helper-text}__item-text--m-success--Color);
-    --#{$helper-text}--m-dynamic__item-icon--Color: var(--#{$helper-text}--m-dynamic--m-success__item-icon--Color);
-    --#{$helper-text}--m-dynamic__item-text--Color: var(--#{$helper-text}--m-dynamic--m-success__item-text--Color);
-    
+    --#{$helper-text}--m-dynamic__item-icon--Color: var(--#{$helper-text}--m-dynamic--m-success__item-icon--Color);  
   }
 
   &.pf-m-error {
-    --#{$helper-text}__item--FontWeight: var(--#{$helper-text}__item--m-error--FontWeight);
+    --#{$helper-text}__item-text--FontWeight: var(--#{$helper-text}__item-text--m-error--FontWeight);
     --#{$helper-text}__item-icon--Color: var(--#{$helper-text}__item-icon--m-error--Color);
-    --#{$helper-text}__item-text--Color: var(--#{$helper-text}__item-text--m-error--Color);
     --#{$helper-text}--m-dynamic__item-icon--Color: var(--#{$helper-text}--m-dynamic--m-error__item-icon--Color);
-    --#{$helper-text}--m-dynamic__item-text--Color: var(--#{$helper-text}--m-dynamic--m-error__item-text--Color);
   }
 
   &.pf-m-dynamic {
-    --#{$helper-text}__item-text--Color: var(--#{$helper-text}--m-dynamic__item-text--Color);
     --#{$helper-text}__item-icon--Color: var(--#{$helper-text}--m-dynamic__item-icon--Color);
   }
 }
