--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -360,6 +360,8 @@
       align-self: stretch;
 
       .#{$check}__input {
+        --#{$check}__input--TranslateY: 0;
+
         align-self: center;
       }
     }
