feat(EmptyState): add 3xl icon size token

--- a/src/patternfly/base/tokens/_tokens-default.scss
+++ b/src/patternfly/base/tokens/_tokens-default.scss
@@ -29,6 +29,7 @@
   --pf-t--global--border--width--300: 3px;
   --pf-t--global--border--width--200: 2px;
   --pf-t--global--border--width--100: 1px;
+  --pf-t--global--icon--size--500: 96px;
   --pf-t--global--icon--size--400: 56px;
   --pf-t--global--icon--size--300: 22px;
   --pf-t--global--icon--size--250: 16px;
@@ -145,6 +146,7 @@
   --pf-t--global--icon--color--300: var(--pf-t--color--white);
   --pf-t--global--icon--color--200: var(--pf-t--color--gray--50);
   --pf-t--global--icon--color--100: var(--pf-t--color--gray--90);
+  --pf-t--global--icon--size--3xl: var(--pf-t--global--icon--size--500);
   --pf-t--global--icon--size--2xl: var(--pf-t--global--icon--size--400);
   --pf-t--global--icon--size--xl: var(--pf-t--global--icon--size--300);
   --pf-t--global--icon--size--lg: var(--pf-t--global--icon--size--250);
