feat(SimpleList): pull in new v6 branch

--- a/src/patternfly/components/SimpleList/simple-list-item-link.hbs
+++ b/src/patternfly/components/SimpleList/simple-list-item-link.hbs
@@ -1,4 +1,6 @@
-<{{#if simple-list-item-link--IsLink}}a{{else}}button{{/if}} class="{{pfv}}simple-list__item-link{{#if simple-list-item-link--modifier}} {{simple-list-item-link--modifier}}{{/if}}"
+<{{#if simple-list-item-link--IsLink}}a{{else}}button{{/if}} class="{{pfv}}simple-list__item-link
+    {{~#if simple-list-item-link--IsLink}} pf-m-link{{/if}}
+    {{~#if simple-list-item-link--modifier}} {{simple-list-item-link--modifier}}{{/if}}"
   {{#if simple-list-item-link--IsLink}}
     href="#"
     tabindex="0"
